@@ -251,6 +251,7 @@ RULE_INT ( Spells, MaxTotalSlotsNPC, 36)
 RULE_BOOL (Spells, EnableBlockedBuffs, true)
 RULE_INT ( Spells, ReflectType, 1) //0 = disabled, 1 = single target player spells only, 2 = all player spells, 3 = all single target spells, 4 = all spells
 RULE_INT ( Spells, VirusSpreadDistance, 30) // The distance a viral spell will jump to its next victim
+RULE_BOOL( Spells, LiveLikeFocusEffects, true) // Determines whether specific healing, dmg and mana reduction focuses are randomized
 RULE_CATEGORY_END()
 
 RULE_CATEGORY( Combat )
